tests/toy/neg/001654_mutation.toylang
program a = { while a if do sleep; } .
